<resources>
    <string name="app_name">Personas</string>
    <string name="numero">No.</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="crearOpc">Crear Persona</string>
    <string name="errCedula">Ingrese la cédula de la persona</string>
    <string name="errNombre">Ingrese el nombre de la persona</string>
    <string name="errApellido">Debe ingresar el apellido</string>
    <string name="msjCrear">La persona se ha registrado correctamente</string>
    <string name="listarOpc">Listar Personas</string>
    <string-array name="opciones">
        <item>@string/crearOpc</item>
        <item>@string/listarOpc</item>
    </string-array>
</resources>
